Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/TextBlockIllegalEscape.out
TextBlockIllegalEscape.java:11:13: compiler.err.illegal.esc.char
1 error
